[package]
name = "connect-ip-rust-scion"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
clap = { version = "4", features = ["derive"] }
directories-next = "2.0.0"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1.3.1"
octets = "0.3.3"
pnet = "0.35.0"
pnet_datalink = "0.35.0"
quiche = "0.24.6"
rcgen = "0.14.5"
ring = "0.17.14"
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1.41"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
tun-rs = { version = "2", features = ["async"] }
url = "2.5.7"
